Solve partners image alignment problem.

--- a/webapp/webapp/Content/css/site.css
+++ b/webapp/webapp/Content/css/site.css
@@ -537,6 +537,56 @@ footer ul ul {
   font-size: 12px;
   color: #636363;
 }
+.clearfix:before,
+.clearfix:after {
+  content: " ";
+  display: table;
+}
+.clearfix:after {
+  clear: both;
+}
+.center-block {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+.pull-right {
+  float: right !important;
+}
+.pull-left {
+  float: left !important;
+}
+.hide {
+  display: none !important;
+}
+.show {
+  display: block !important;
+}
+.invisible {
+  visibility: hidden;
+}
+.text-hide {
+  font: 0/0 a;
+  color: transparent;
+  text-shadow: none;
+  background-color: transparent;
+  border: 0;
+}
+.hidden {
+  display: none !important;
+  visibility: hidden !important;
+}
+.affix {
+  position: fixed;
+}
+@media (min-width: 992px) {
+  #carousel-partners [class="col-md-4"]:first-child img {
+    float: right !important;
+  }
+  #carousel-partners [class="col-md-4"]:last-child img {
+    float: left !important;
+  }
+}
 body.show .row {
   border: thin solid red;
   margin-bottom: 10px;
